--- a/RustFileExplorer/index.html
+++ b/RustFileExplorer/index.html
@@ -35,9 +35,47 @@
                     <path d="M21 21l-4.35-4.35"/>
                   </svg>
                 </button>
+                <button id="config-button" class="config-button">
+                  <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                    <path d="M12 15a3 3 0 100-6 3 3 0 000 6z" />
+                    <path d="M19.4 15a1.65 1.65 0 00.33 1.82l.06.06a2 2 0 010 2.83 2 2 0 01-2.83 0l-.06-.06a1.65 1.65 0 00-1.82-.33 1.65 1.65 0 00-1 1.51V21a2 2 0 01-2 2 2 2 0 01-2-2v-.09A1.65 1.65 0 009 19.4a1.65 1.65 0 00-1.82.33l-.06.06a2 2 0 01-2.83 0 2 2 0 010-2.83l.06-.06a1.65 1.65 0 00.33-1.82 1.65 1.65 0 00-1.51-1H3a2 2 0 01-2-2 2 2 0 012-2h.09A1.65 1.65 0 004.6 9a1.65 1.65 0 00-.33-1.82l-.06-.06a2 2 0 010-2.83 2 2 0 012.83 0l.06.06a1.65 1.65 0 001.82.33H9a1.65 1.65 0 001-1.51V3a2 2 0 012-2 2 2 0 012 2v.09a1.65 1.65 0 001 1.51 1.65 1.65 0 001.82-.33l.06-.06a2 2 0 012.83 0 2 2 0 010 2.83l-.06.06a1.65 1.65 0 00-.33 1.82V9a1.65 1.65 0 001.51 1H21a2 2 0 012 2 2 2 0 01-2 2h-.09a1.65 1.65 0 00-1.51 1z"/>
+                  </svg>
+                </button>
               </div>
             </div>
             <div id="search-status" class="search-status"></div>
+            <div class="config-panel hidden">
+              <h3>Search Configuration</h3>
+              <div class="config-group">
+                <label for="quick-search-depth">Quick Search Depth:</label>
+                <div class="input-with-help">
+                  <input type="number" id="quick-search-depth" min="0" max="5" value="2" />
+                  <div class="help-text">How many subfolder levels to search (0-5)</div>
+                </div>
+              </div>
+              <div class="config-group">
+                <label for="max-results">Max Results:</label>
+                <div class="input-with-help">
+                  <input type="number" id="max-results" min="100" max="10000" value="1000" step="100" />
+                  <div class="help-text">Maximum number of results to show</div>
+                </div>
+              </div>
+              <div class="config-group">
+                <label for="search-hidden">Search Hidden Files:</label>
+                <div class="input-with-help">
+                  <input type="checkbox" id="search-hidden" />
+                  <div class="help-text">Include hidden files in search results</div>
+                </div>
+              </div>
+              <div class="config-group">
+                <label for="debounce-time">Debounce Time (ms):</label>
+                <div class="input-with-help">
+                  <input type="number" id="debounce-time" min="50" max="1000" value="100" step="50" />
+                  <div class="help-text">Delay before searching as you type</div>
+                </div>
+              </div>
+              <button id="config-apply" class="config-apply">Apply</button>
+            </div>
           </div>
           <div id="directory-contents" class="directory-contents">
             <!-- Directory contents will be populated here -->
