--- a/RustFileExplorer/index.html
+++ b/RustFileExplorer/index.html
@@ -8,7 +8,7 @@
     <script type="module" src="/src/main.ts" defer></script>
   </head>
 
-  <body>
+  <body oncontextmenu="return false">
     <div class="app-container">
       <!-- Left Sidebar -->
       <nav class="sidebar">
