--- a/RustFileExplorer/index.html
+++ b/RustFileExplorer/index.html
@@ -9,6 +9,7 @@
   </head>
 
   <body oncontextmenu="return false">
+    <div id="loading-screen" class="loading-screen"><div class="loading-content"><div class="loading-logo"><h1>Imperium Industries</h1></div><div class="loading-spinner"></div><div class="loading-text">Loading your file explorer...</div></div></div>
     <div class="app-container">
       <!-- Left Sidebar -->
       <nav class="sidebar">
